# InfinityVM

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.anvil  Dockerfile.clob  Dockerfile.contract-deployer  Dockerfile.coproc  Dockerfile.coproc-node  Dockerfile.coprocessor-node  Dockerfile.ethos-reth  Dockerfile.ethos-reth-no-cache  Dockerfile.exec  Dockerfile.executor  Dockerfile.server  Dockerfile.sp1  LICENSE  Makefile  README.md  TUTORIAL.md  book.toml  entrypoint-exec.sh  rust-toolchain.toml
.github/workflows/: book.yml  clob.yml  contracts.yml  docker-anvil.yml  docker-contracts.yml  docker-coproc.yml  docker-exec.yml  docker-reth.yml  docker.yml  lint.yml  release.yml  repo.yml  rust.yml  spelling.yml  test-contracts.yml
benches/: README.md
benches/vm-comparison/: Cargo.toml
benches/vm_comparison/: Cargo.toml
benches/vm_comparison/src/: lib.rs  main.rs
book/: README.md  book.toml
book/src/: README.md  SUMMARY.md
clob/: README.md
clob/client/: Cargo.toml
clob/client/src/: cli.rs  client.rs  lib.rs
clob/contracts/: Cargo.toml
clob/core/: Cargo.toml
clob/core/src/: lib.rs  orderbook.rs
clob/core/src/api/: balance_change.rs  mod.rs  program.rs
clob/node/: Cargo.toml
clob/programs/: Cargo.toml  build.rs
clob/programs/app/: Cargo.toml
clob/programs/app/src/: clob.rs
clob/programs/src/: lib.rs  main.rs
clob/test-utils/: Cargo.toml
clob/test-utils/src/: lib.rs
contracts/: Makefile  README.md  foundry.toml  generate_bindings.sh
contracts/script/: CancelJob.s.sol  ClobDeployer.s.sol  Coprocessor.s.sol  CoprocessorDeployer.s.sol  MatchingGameDeployer.s.sol  MockConsumerDeployer.s.sol  PrintBalance.s.sol  PrintCoprocessorOperatorAddress.s.sol  PrintJobMetadata.s.sol  PrintJobResult.s.sol  PrintMaxNonce.s.sol  PrintNextNonce.s.sol  PrintRelayerAddress.s.sol  RequestJob.s.sol  SetCoprocessorOperatorAddress.s.sol  SetRelayerAddress.s.sol  SubmitResult.s.sol  SubmitResultForOffchainJob.s.sol  anvil-devnet-startup.sh  coprocessor-deployed-anvil-state.json  deploy-coprocessor-and-save-anvil-state.sh
contracts/src/: ClobConsumer.sol  (+7 more)
crates/contracts/: Cargo.toml
crates/contracts/json/: Consumer.json  IJobManager.json  JobManager.json  MockConsumer.json  ProxyAdmin.json  StatefulConsumer.json  TransparentUpgradeableProxy.json
crates/contracts/src/: lib.rs
crates/coproc/: Cargo.toml  build.rs
crates/coproc/src/: actor.rs  cli.rs  config.rs  elf_store.rs  event.rs  execute.rs  intake.rs  job_executor.rs  job_executor2.rs  lib.rs  main.rs  metrics.rs  node.rs  pool.rs  relayer.rs  remote_db.rs  server.rs  writer.rs
crates/coproc/src/tests/: mocks.rs  remote_db_tests.rs
crates/coprocessor-node/: Cargo.toml
crates/coprocessor-node/src/: cli.rs  event.rs  gateway.rs  intake.rs  job_executor.rs  job_processor.rs  lib.rs  main.rs  metrics.rs  metrics_server.rs  node.rs  queue.rs  relayer.rs  server.rs  service.rs  writer.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  queue.rs  tables.rs
crates/elf-store/: Cargo.toml  build.rs
crates/elf-store/migrations/: 001_create_elf_store.sql
crates/elf-store/src/: elf_store.v1.rs  lib.rs
crates/http-gateway/: Cargo.toml
crates/http-gateway/src/: gateway.rs  main.rs
crates/mock-consumer/: Cargo.toml
crates/mock-consumer/src/: lib.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: lib.rs
crates/remote-db/: Cargo.toml  build.rs
crates/remote-db/migrations/: 001_create_elf_store.sql
crates/remote-db/src/: lib.rs
crates/scripts/: Cargo.toml  example.env
crates/scripts/proto-gen/: Cargo.toml
crates/scripts/proto-gen/src/: main.rs
crates/scripts/src/: anvil-devnet-startup.sh  grpc.rs  lib.rs  local.rs  main.rs  memory_image_demo.rs  node_test.rs  proto_build.rs  send_tx.rs  signer.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
crates/zkvm/: Cargo.toml
crates/zkvm-executor/: Cargo.toml
crates/zkvm-executor/src/: lib.rs  service.rs
crates/zkvm-tracing/: Cargo.toml
crates/zkvm-tracing/src/: lib.rs
crates/zkvm/src/: lib.rs
elf/: riscv32im-succinct-zkvm-elf
matching-game/client/: Cargo.toml
matching-game/client/src/: client.rs  lib.rs
matching-game/core/: Cargo.toml
matching-game/core/src/: api.rs  lib.rs
matching-game/core/src/api/: mod.rs  program.rs
matching-game/node/: Cargo.toml
matching-game/node/src/: app.rs  batcher.rs  engine.rs  lib.rs  main.rs  state.rs
matching-game/node/src/db/: mod.rs  models.rs  tables.rs
matching-game/programs/: Cargo.toml  build.rs
matching-game/programs/app/: Cargo.toml
matching-game/programs/app/src/: matching-game.rs  matching_game.rs
matching-game/programs/src/: lib.rs
matching-game/server/: Cargo.toml
matching-game/server/src/: batcher.rs  client.rs  contracts.rs  engine.rs  lib.rs  main.rs  state.rs  test_utils.rs
matching-game/test-utils/: Cargo.toml
matching-game/test-utils/src/: lib.rs
programs/: README.md
programs/intensity-test/: Cargo.toml  build.rs
programs/intensity-test/program/: Cargo.toml
programs/intensity-test/program/src/: main.rs
programs/intensity-test/sp1/: Cargo.toml  build.rs
programs/intensity-test/src/: lib.rs
proto/: buf.gen.yaml  buf.yaml
rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
rust/test/: Cargo.toml  README.md
rust/test/src/: lib.rs
rust/test/tests/: coprocessor_node.rs  executor.rs  mock_consumer.rs  serialization.rs
scripts/: protogen.sh
server/: .golangci.yml  Dockerfile  Makefile  go.mod  go.sum  main.go
test/: Cargo.toml  README.md
test-load/: Cargo.toml  FLAMEGRAPH.md  README.md  example.env  report.html
test-load/src/: config.rs  lib.rs  main.rs
test/e2e/: Cargo.toml  README.md
test/e2e/src/: lib.rs
test/e2e/tests/: clob.rs  contains_elf.rs  matching_game.rs  mock_consumer.rs  pending_jobs.rs  retrigger_jobs.rs  serialization.rs
test/load-test/: Cargo.toml  FLAMEGRAPH.md  README.md
test/load-test/src/: lib.rs  main.rs
test/src/: clob.rs  lib.rs  utils.rs
test/tests/: clob.rs  mock_consumer.rs  serialization.rs
(+348 files in other folders)
