[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.78"

[workspace]
members = [
	"bin/exec",
	"crates/contracts",
	"crates/coproc",
	"crates/db",
	"crates/eip4844",
	"crates/mock-consumer",
	"crates/scripts",
	"crates/sdk/abi",
	"crates/sdk/proto",
	"crates/sdk/sp1-utils",
	"crates/sdk/test-utils",
	"crates/tracing",
	"crates/zkvm",
	"crates/zkvm-executor",
	"crates/tracing",
	"examples/clob/programs",
	"examples/matching-game/programs",
	"test/e2e",
	"test/load-test",
	"programs/mock-consumer",
	"programs/intensity-test",
]
exclude = [
	"examples/clob/programs/program",
	"examples/matching-game/programs/program",
	"programs/mock-consumer/program",
	"programs/intensity-test/program",
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
branches_sharing_code = "warn"
clear_with_drain = "warn"
derive_partial_eq_without_eq = "warn"
empty_line_after_outer_attr = "warn"
equatable_if_let = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_with_drain = "warn"
large_stack_frames = "warn"
manual_clamp = "warn"
mutex_integer = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
uninhabited_references = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
useless_let_if_seq = "warn"
use_self = "warn"
missing_const_for_fn = "warn"
empty_line_after_doc_comments = "warn"
iter_on_single_items = "warn"
match_same_arms = "warn"
doc_markdown = "warn"
unnecessary_struct_initialization = "warn"
string_lit_as_bytes = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
type_repetition_in_bounds = "warn"
flat_map_option = "warn"
manual_assert = "warn"
manual_string_new = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
zero_sized_map_values = "warn"
single_char_pattern = "warn"
needless_continue = "warn"
enum_glob_use = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
blocks_in_conditions = "allow"
cognitive_complexity = "allow"
collection_is_never_read = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"

[workspace.dependencies]
# a
anyhow = { version = "1", default-features = false }
axum = { version = "0", features = ["http2", "tokio", "json"], default-features = false }
# All alloy deps should be kept in sync with reth
# only include features that we know can be compiled into zkvm program
alloy = { version = "0.9.2", features = ["sol-types"], default-features = false }
# for ivm-exec, we don't use the alloy facade crate
alloy-eips = { version = "0.9.2", default-features = false }
alloy-consensus = { version = "0.9.2" }
alloy-signer-local = { version = "0.9.2"}
alloy-network = { version = "0.9.2"}
alloy-rpc-types = { version = "0.9.2" }
alloy-primitives = { version = "0.8.15", default-features = false, features = [
    "map-foldhash",
] }

# b
bincode = { version = "1", default-features = false }
borsh = { version = "1", features = ["derive", "std"], default-features = false }

# c
clap = { version = "4", features = ["derive"], default-features = false }
crossbeam = { version = "0.8" }

# d
dashmap = "6"
dotenvy = { version = "0.15.7", default-features = false }

# e
eyre = { version = "0.6", default-features = false }

# f
futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
flume = { version = "0", features = ["async"], default-features = false }

# g
goose = { version = "0.17", default-features = false }

# h
home = { version = "0.5", default-features = false }
http = { version = "0.2.12", default-features = false }

# k
k256 = { version = "0.13", default-features = false }
kairos-trie = { git = "https://github.com/cspr-rad/kairos-trie.git", features = ["serde"] }

# l
# m
# n
num_cpus = { version = "1" }

# o
once_cell = { version = "1.8", default-features = false }

# p
parking_lot = { version = "0.12" }
prometheus = { version = "0.9", features = ["process"] }
prost = { version = "0.13", features = ["derive", "std"], default-features = false }

# q
# r
rand = { version = "0.8", default-features = false }
# reth = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904" }
# reth-db = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", features = ["mdbx"], default-features = false }
# reth-db-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }
# reth-codecs = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", features = ["std", "alloy"], default-features = false }
# reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }
# reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }
# reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }
# reth-ethereum-payload-builder= { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }
# reth-provider = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }
# reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }
# reth-revm = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }
# reth-evm = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }
# reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }
# reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }
# reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }
# reth-network = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }
# reth-rpc = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }
# reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }
# reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }
# reth-payload-validator = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }
# reth-tasks = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }
# reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }
# reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", rev = "e7b78443a90d7dacc369558ae28b962b296c7904", default-features = false }

reth = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231" }
reth-db = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", features = ["mdbx"], default-features = false }
reth-db-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }
reth-codecs = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", features = ["std", "alloy"], default-features = false }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }
reth-ethereum-payload-builder= { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }
reth-network = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }
reth-rpc = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }
reth-tasks = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", rev = "28d5231", default-features = false }

# revm needs to be kept in sync with reth
revm = { version = "19.2.0", default-features = false }
revm-primitives = { version = "15.1.0", default-features = false }
revm-interpreter = { version = "15.0.0", default-features = false }
revm-inspectors = "0.14.1"

# s
serde = { version = "1.0", features = ["derive", "std"], default-features = false }
serde_with = {  version = "3", features = ["macros", "hex"], default-features = false }
serde_json = { version = "1.0", default-features = false }
sha2 = { version = "0.10", features = ["std"], default-features = false }
strum = { version = "0.26.3", features = ["derive"], default-features = false}

sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", rev = "15be73d3acae3718a0acc529ed566f6a448b1c0e", features = ["libm", "lib"], default-features = false }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "15be73d3acae3718a0acc529ed566f6a448b1c0e", default-features = false }
sp1-build = "3.1.0"

# t
tonic-build = { version = "0.12", features = ["prost", "transport", "cleanup-markdown"], default-features = false }
tonic = { version = "0.12", features = ["transport", "codegen", "prost", "channel", "server", "router"], default-features = false }
tonic-reflection = { version = "0.12", features = ["server"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "tracing"], default-features = false }
thiserror = { version = "1", default-features = false }
tempfile = { version = "3", default-features = false }
tracing = { version = "0.1.40", default-features = false}
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt","json"] , default-features = false }
tracing-appender = { version = "0.2.3", default-features = false }
toml = { version = "0.8" }

# u
url = { version = "2.4.0", default-features = false }

# v
# w
# x
# y
# z

# clob only deps
bytes = "1.7"
paste = "1"
reqwest = { version = "0", features = ["json"] }

# local
clob-client ={ path = "examples/clob/client" }
clob-contracts ={ path = "examples/clob/contracts" }
clob-core = { path = "examples/clob/core" }
clob-node = { path = "examples/clob/node" }
clob-programs = { path = "examples/clob/programs" }
clob-test-utils = { path = "examples/clob/test-utils" }
matching-game-core = { path = "examples/matching-game/core" }
matching-game-server = { path = "examples/matching-game/server" }
matching-game-programs = { path = "examples/matching-game/programs" }
ivm-mock-consumer = { path = "crates/mock-consumer" }
ivm-abi = { path = "crates/sdk/abi" }
ivm-contracts = { path = "crates/contracts" }
ivm-coproc = { path = "crates/coproc" }
ivm-db = { path = "crates/db" }
ivm-eip4844 = { path = "crates/eip4844" }
ivm-proto = { path = "crates/sdk/proto" }
ivm-sp1-utils = { path = "crates/sdk/sp1-utils" }
ivm-test-utils = { path = "crates/sdk/test-utils" }
ivm-zkvm = { path = "crates/zkvm" }
ivm-tracing = { path = "crates/tracing" }
ivm-zkvm-executor = { path = "crates/zkvm-executor" }
mock-consumer-programs = { path = "programs/mock-consumer" }
intensity-test-programs = { path = "programs/intensity-test" }
