[package]
name = "test-load"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
alloy = { workspace = true }
goose = { workspace = true }
tokio = { workspace = true, features = ["process"] }
serde_json = { workspace = true }
once_cell = "1.8"
abi = { workspace = true }
db = { workspace = true }
proto = { workspace = true }
test-utils = { workspace = true }

[dev-dependencies]
