[package]
name = "integration"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
tonic = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
risc0-binfmt = { workspace = true }
risc0-zkp = { workspace = true }
alloy = { workspace = true }
tempfile = { workspace = true }
contracts = { path = "../crates/contracts" }
proto = { path = "../crates/proto" }
coprocessor-node = { path = "../crates/coprocessor-node" }
zkvm-executor = { path = "../crates/zkvm-executor" }
test-utils = { path = "../crates/test-utils" }
db = { path = "../crates/db" }

clob-contracts = { workspace = true }

[dev-dependencies]
mock-consumer-methods = { path = "../programs/risc0/mock-consumer/methods" }
serde_json = { workspace = true }
