[package]
name = "e2e"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
tonic = { workspace = true }
tokio = { workspace = true, features = ["process"] }
futures = { workspace = true }
risc0-binfmt = { workspace = true }
risc0-zkp = { workspace = true }
alloy = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
borsh = { workspace = true }

contracts = { workspace = true }
proto = { workspace = true }
coprocessor-node = { workspace = true }
zkvm-executor = { workspace = true }
test-utils = { workspace = true }
db = { workspace = true }
clob-contracts = { workspace = true }
clob-programs = { workspace = true }
clob-core = { workspace = true }
clob-node = { workspace = true }

[dev-dependencies]
mock-consumer-methods = { path = "../programs/risc0/mock-consumer/methods" }
serde_json = { workspace = true }
alloy-sol-types = { workspace = true }
tracing-subscriber = { workspace = true }