[package]
name = "e2e"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
tonic = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
risc0-binfmt = { workspace = true }
risc0-zkp = { workspace = true }
alloy = { workspace = true }
borsh = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
reth-db = { workspace = true }

coprocessor-node = { workspace = true }
contracts = { workspace = true }
proto = { workspace = true }
zkvm-executor = { workspace = true }
test-utils = { workspace = true }
abi = { workspace = true }
db = { workspace = true }
clob-contracts = { workspace = true }
clob-programs = { workspace = true }
clob-core = { workspace = true }
clob-client = { workspace = true }
clob-node = { workspace = true }
clob-test-utils = { workspace = true }
mock-consumer = { workspace = true }

[dev-dependencies]
mock-consumer-methods = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
