	[package]
name = "clob-client"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
alloy = { workspace = true, features = ["full", "contract", "transport-http", "transport-ws", "network", "providers", "pubsub", "signer-local", "signer-keystore", "rpc-types-debug", "rpc-types-trace", "json-rpc", "rpc-client", "rlp", "sol-types"] }
borsh = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }

# local deps
proto = { workspace = true }
clob-core = { workspace = true }
clob-node = { workspace = true }
test-utils = { workspace = true }
clob-test-utils = { workspace = true }
clob-contracts = { workspace = true }
clob-programs = { workspace = true }