[package]
name = "clob-core"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
borsh = { version = "1", features = ["derive", "std"], default-features = false }
sha2 = { version = "0.10", features = ["std"], default-features = false }
alloy-primitives = { version = "0.8", default-features = false }
# alloy-sol-types = { version = "0.8", default-features = false }
alloy-sol-types = { workspace = true }
