[package]
name = "clob-programs"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
risc0-zkvm = { workspace = true }
clob-core = { workspace = true }
borsh = { workspace = true }
alloy = { workspace = true }
# we need exact match to SolValue type in clob-core
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }

[build-dependencies]
risc0-build = { workspace = true }

[package.metadata.risc0]
methods = ["app"]
