[package]
name = "clob-test-utils"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
clob-core = { workspace = true }
clob-contracts = { workspace = true }
alloy = {  workspace = true, features = ["full", "contract", "transport-http", "transport-ws", "network", "providers", "pubsub", "signer-local", "signer-keystore", "rpc-types-debug", "rpc-types-trace", "json-rpc", "rpc-client", "rlp", "sol-types"] }
test-utils = { workspace = true }