[package]
name = "contracts"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
alloy = { workspace = true, features = ["serde", "json", "contract"] }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
