[package]
name = "ivm-contracts"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
alloy = { workspace = true, features = ["serde", "json", "contract", "transports"] }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
