[package]
name = "ivm-coproc"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
alloy = { workspace = true, features = ["reqwest", "provider-ws", "signer-local", "rpc-types", "asm-keccak"] }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
home = { workspace = true }
tracing = { workspace = true }
k256 = { workspace = true }
reth-db = { workspace = true }
serde = { workspace = true }
dashmap = { workspace = true }
eyre = { workspace = true }
prometheus = { workspace = true }
axum = { workspace = true }
flume = { workspace = true }
num_cpus = { workspace = true }
url = { workspace = true }

ivm-contracts = { workspace = true }
ivm-abi = { workspace = true }
ivm-db = { workspace = true }
ivm-proto = { workspace = true }
ivm-zkvm-executor = { workspace = true }
ivm-tracing = { workspace = true }
ivm-eip4844 = { workspace = true }

[dev-dependencies]
ivm-test-utils = { workspace = true }
ivm-mock-consumer = { workspace = true }