[package]
name = "ivm-coproc"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
alloy = { workspace = true, features = ["reqwest", "provider-ws", "signer-local", "rpc-types", "asm-keccak"] }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
home = { workspace = true }
tracing = { workspace = true }
k256 = { workspace = true }
reth-db = { workspace = true }
serde = { workspace = true }
dashmap = { workspace = true }
eyre = { workspace = true }
prometheus = { workspace = true }
axum = { workspace = true }
num_cpus = { workspace = true }
url = { workspace = true }
lz4_flex = { workspace = true }

ivm-contracts = { workspace = true }
ivm-abi = { workspace = true }
ivm-db = { workspace = true }
ivm-proto = { workspace = true }
ivm-zkvm-executor = { workspace = true }
ivm-tracing = { workspace = true }
ivm-eip4844 = { workspace = true }

tikv-jemallocator = { version = "0.6", optional = true }

[dev-dependencies]
ivm-test-utils = { workspace = true }
ivm-mock-consumer = { workspace = true }

[build-dependencies]
vergen-git2 = { workspace = true }

[features]
default = ["min-info-logs", "jemalloc"]

jemalloc = ["dep:tikv-jemallocator"]

min-error-logs = ["tracing/release_max_level_error"]
min-warn-logs = ["tracing/release_max_level_warn"]
min-info-logs = ["tracing/release_max_level_info"]
min-debug-logs = ["tracing/release_max_level_debug"]
min-trace-logs = ["tracing/release_max_level_trace"]
