[package]
name = "ivm-coprocessor-node"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
alloy = { workspace = true, features = ["reqwest", "full", "contract", "transport-http", "transport-ws", "network", "providers", "pubsub", "signer-local", "signer-keystore", "rpc-types-debug", "rpc-types-trace", "json-rpc", "rpc-client", "rlp", "sol-types"] }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
home = { workspace = true }
tracing = { workspace = true }
k256 = { workspace = true }
reth-db = { workspace = true }
async-channel = { workspace = true }
serde = { workspace = true }

prometheus = { workspace = true }
axum = { workspace = true }
contracts = { workspace = true }
ivm-abi = { workspace = true }
ivm-db = { workspace = true }
ivm-proto = { workspace = true }
ivm-zkvm-executor = { workspace = true }
zkvm-tracing = { workspace = true }
eip4844 = { workspace = true }

[dev-dependencies]
ivm-test-utils = { workspace = true }
mock-consumer = { workspace = true }