[package]
name = "db"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
alloy = { workspace = true, features = ["full", "contract", "transport-http", "transport-ws", "network", "providers", "pubsub", "signer-local", "signer-keystore", "rpc-types-debug", "rpc-types-trace", "json-rpc", "rpc-client", "rlp", "sol-types"] }
thiserror = { workspace = true }
sha2 = { workspace = true }
reth-db = { workspace = true }
reth-db-api = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }

ivm-abi = { workspace = true }
bincode = { workspace = true }
ivm-proto = { workspace = true }
eip4844 = { workspace = true }
